# model-router

./: .env.example  .env.stack.example  .gitignore  Dockerfile  README.md  docker-compose.stack.yml  docker-compose.yml  idle-watchdog.sh  kokoro_tts.py  litestream.yml  llama-server-docker-wrapper.sh  pyproject.toml
app/: config.py  database.py  deps.py  main.py  models.py  schemas.py  security.py
app/routers/: admin.py  auth.py  health.py  openai.py
app/services/: audit.py  auth.py  model_manager.py  proxy.py
kokoro-tts/: Dockerfile
open-webui-overlay/: Dockerfile  patch_open_webui.py
scripts/: inject_google_tools.py  startup_checks.py
tests/: test_model_manager.py
