[project]
name = "model-router"
version = "0.1.0"
description = "Multi-tenant FastAPI JWT router for local OpenAI-compatible inference backends"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "bcrypt>=4.1.3,<5.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "psycopg[binary]>=3.2.1",
  "pydantic-settings>=2.5.2",
  "pyjwt>=2.9.0",
  "python-multipart>=0.0.9",
  "redis>=5.0.8",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.30.6",
  "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.8",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py310"
